[package]
name = "blrs"
version = "0.1.0"
authors = ["Erin MacDonald <zeptofine@gmail.com>"]
edition = "2021"


[dependencies]

# downloading Blender builds from builders
reqwest = { version = "0.12.5", optional = true }

# .blend compressions
flate2 = { version = "1.0.31", optional = true }
zstd = { version = "0.13.2", optional = true }

# parsing build info
regex = "1.10.6"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
chrono = { version = "0.4.38", features = ["serde"] }
semver = { version = "1.0.23", features = ["serde"] }

# configuration Saving/Loading
figment = { version = "0.10.19", features = [
    "env",
    "json",
    "parking_lot",
    "serde_json",
    "toml",
] }

# Helpers
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
directories = "5.0.1"
which = { version = "6.0.3", features = ["tracing"] }
parking_lot = { version = "0.12.3" }
log = "0.4.22"
sha2 = "0.10.8"
hex = "0.4.3"
itertools = "0.13.0"
zip = "2.2.0"


[features]
default = ["compressed-blends", "reqwest"]
compressed-blends = ["dep:flate2", "dep:zstd"]
reqwest = ["dep:reqwest"]


[profile.release]
lto = "fat"
