[package]
name = "blrs"
description = "a crate designed to streamline the management and utilization of Blender builds"
repository = "https://github.com/zeptofine/blrs"
documentation = "https://docs.rs/blrs"

version = "0.1.0"
authors = ["Erin MacDonald <zeptofine@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]

# downloading Blender builds from builders
reqwest = { version = "0.12.5", optional = true }

# .blend compressions
flate2 = { version = "1.0.31", optional = true }
zstd = { version = "0.13.2", optional = true }

# parsing build info
regex = "1.10.6"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
chrono = { version = "0.4.38", features = ["serde"] }
semver = { version = "1.0.23", features = ["serde"] }

# configuration Saving/Loading
figment = { version = "0.10.19", features = [
    "env",
    "json",
    "parking_lot",
    "serde_json",
    "toml",
], optional = true }

# Helpers
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
directories = "6.0.0"
log = "0.4.22"
sha2 = "0.10.8"
hex = "0.4.3"
itertools = "0.14.0"
zip = "6.0.0"
document-features = "0.2.10"


[features]
all = ["compressed-blends", "reqwest", "config"]
## Uses [`flate2`] and [`zstd`] to extract builds compressed with Zstd and Gzip.
compressed-blends = ["dep:flate2", "dep:zstd"]
## Adds reqwest methods in various places and gives the helper structs like FetcherState.
reqwest = ["dep:reqwest"]
## Adds config structs that BLRS-brand programs use for shared config state
config = ["dep:figment"]


[profile.release]
lto = "fat"
